[gd_scene load_steps=10 format=2]

[ext_resource path="res://frontend/NPCs/BobScene.gd" type="Script" id=1]
[ext_resource path="res://backend/NPCs/Bob.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/npcs/bob/bob1.png" type="Texture" id=3]
[ext_resource path="res://assets/npcs/bob/bob3.png" type="Texture" id=4]
[ext_resource path="res://assets/npcs/bob/bob2.png" type="Texture" id=5]
[ext_resource path="res://assets/npcs/bob/background/pixil-frame-0 (7).png" type="Texture" id=6]
[ext_resource path="res://assets/npcs/bob/background/big_38f904de16.jpg" type="Texture" id=7]
[ext_resource path="res://assets/sfx/street_sounds.mp3" type="AudioStream" id=8]

[sub_resource type="SpriteFrames" id=14]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 5 ), ExtResource( 3 ), ExtResource( 5 ), ExtResource( 3 ), ExtResource( 5 ), ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 1.0
} ]

[node name="BobScene" type="Control"]
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackgroundPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -25.0
bus = "BackgroundFx"

[node name="IntroductionPlayer" type="AudioStreamPlayer" parent="."]
volume_db = -10.0
bus = "BobSpeech"

[node name="BobSprite" type="AnimatedSprite" parent="."]
position = Vector2( 870, 440 )
scale = Vector2( 0.4, 0.4 )
frames = SubResource( 14 )
frame = 1
playing = true
flip_h = true

[node name="SceneLoaded" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="BobBack" parent="." instance=ExtResource( 2 )]

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 512.648, 296.963 )
scale = Vector2( 1.06711, 0.921142 )
z_index = -4
texture = ExtResource( 7 )

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( 615, 292 )
scale = Vector2( 2.34239, 2.05714 )
z_index = -1
texture = ExtResource( 6 )

[connection signal="finished" from="IntroductionPlayer" to="." method="_on_IntroductionPlayer_finished"]
[connection signal="timeout" from="SceneLoaded" to="." method="_on_SceneLoaded_timeout"]
[connection signal="new_trigger_phrase" from="BobBack" to="." method="_on_BobBack_new_trigger_phrase"]
[connection signal="shifter_found" from="BobBack" to="." method="_on_BobBack_shifter_found"]
